discussion/kv_engine/155091/155091_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46365: Record a DCP history and dump on exception

Intermittent failure looks to be buffer ack related, commit
records each opcode and the amount used in buffer ack
calculations. This should give some visibility into what
happens when the test fails and be comparable to a successful
run.

Change-Id: Id8a71e787042b3765e7efd6f5d630255b44445c0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-06-04 12:31:33.000000000
Message: 
Patch Set 2: Published edit on patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-04 12:56:36.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31139/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:425:25:
error: no matching member function for call to "emplace_back"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31139/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9499/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:425:25: error: no matching member function for call to "emplace_back" [clang-diagnostic-error]
                history.emplace_back(
                        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_vector.h:1212:2: note: candidate function [with _Args = <>] not viable: requires 0 arguments, but 1 was provided
        emplace_back(_Args&&... __args);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:453:21: error: no matching member function for call to "emplace_back" [clang-diagnostic-error]
            history.emplace_back({producers.last_op, producers.last_packet_size});
                    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_vector.h:1212:2: note: candidate function [with _Args = <>] not viable: requires 0 arguments, but 1 was provided
        emplace_back(_Args&&... __args);
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9499/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:425:25:
error: no matching member function for call to "emplace_back" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9499/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36449/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\ep_testsuite_dcp.cc(425): error C2660: "std::vector<std::pair<cb::mcbp::ClientOpcode,size_t>,std::allocator<_Ty>>::emplace_back": function does not take 1 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36449/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan.DJR_testing_please_ignore/job/master/1192/ : FAILURE

Compile error at [2021-06-04T12:33:56.356Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:425:25:
error: no matching member function for call to "emplace_back"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan.DJR_testing_please_ignore/job/master/1192/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10144/ : FAILURE

Compile error at [2021-06-04T12:33:34.356Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:425:25:
error: no matching member function for call to "emplace_back"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10144/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11219/ : FAILURE

Compile error at [2021-06-04T12:40:14.772Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:427:37:
error: no matching function for call to ?std::vector<std::pair<cb::mcbp::ClientOpcode, long unsigned int> >::emplace_back(<brace-enclosed initializer list>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11219/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11074/ : FAILURE

Compile error at [2021-06-04T12:40:20.551Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:427:37:
error: no matching function for call to ?std::vector<std::pair<cb::mcbp::ClientOpcode, long unsigned int> >::emplace_back(<brace-enclosed initializer list>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11074/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11490/ : FAILURE

Compile error at [2021-06-04T12:37:37.923Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:425:25:
error: no matching member function for call to "emplace_back"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11490/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19077/ : FAILURE

Compile error at [2021-06-04T12:39:37.958Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:425:25:
error: no matching member function for call to "emplace_back"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19077/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8096/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/49/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
